# USB2CAN_motor

./: .gitignore  README.md  SOUl .md  XBOX_CONTROL_GUIDE.md  test_hardware.sh
install/motor_control_ros2/share/motor_control_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_control_ros2/share/motor_control_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_motor_control_ros2__rosidl_generator_cExport-noconfig.cmake  export_motor_control_ros2__rosidl_generator_cExport.cmake  export_motor_control_ros2__rosidl_generator_cppExport.cmake  export_motor_control_ros2__rosidl_generator_pyExport-noconfig.cmake  export_motor_control_ros2__rosidl_generator_pyExport.cmake  export_motor_control_ros2__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_motor_control_ros2__rosidl_typesupport_fastrtps_cExport.cmake  export_motor_control_ros2__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_motor_control_ros2__rosidl_typesupport_fastrtps_cppExport.cmake  motor_control_ros2Config.cmake  motor_control_ros2__rosidl_typesupport_cExport-noconfig.cmake  motor_control_ros2__rosidl_typesupport_cExport.cmake  motor_control_ros2__rosidl_typesupport_cppExport-noconfig.cmake  motor_control_ros2__rosidl_typesupport_cppExport.cmake  motor_control_ros2__rosidl_typesupport_introspection_cExport-noconfig.cmake  motor_control_ros2__rosidl_typesupport_introspection_cExport.cmake  motor_control_ros2__rosidl_typesupport_introspection_cppExport-noconfig.cmake  motor_control_ros2__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake-extras.cmake~HEAD  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/motor_control_ros2/share/motor_control_ros2/config/: control_params.yaml  motors.yaml  motors.yaml~HEAD_0
install/motor_control_ros2/share/motor_control_ros2/environment/: ament_prefix_path.sh  path.sh
install/motor_control_ros2/share/motor_control_ros2/launch/: motor_control.launch.py
install/motor_control_ros2/share/motor_control_ros2/msg/: ControlFrequency.idl  ControlFrequency.msg  DJIMotorCommand.idl  DJIMotorCommand.msg  DJIMotorState.idl  DJIMotorState.msg  DamiaoMotorCommand.idl  DamiaoMotorCommand.msg  DamiaoMotorState.idl  MotorStateGeneric.idl  MotorStateGeneric.msg  UnitreeGO8010Command.idl  UnitreeGO8010Command.msg  UnitreeGO8010Command.msg~HEAD_0  UnitreeGO8010State.idl  UnitreeMotorCommand.idl  UnitreeMotorCommand.msg  UnitreeMotorState.idl  UnitreeMotorState.msg
install/motor_control_ros2/share/motor_control_ros2/srv/: MotorEnable.idl  MotorEnable.srv  MotorEnable_Request.msg  MotorSetZero.idl  MotorSetZero_Request.msg  MotorSwitchMode.idl  MotorSwitchMode.srv  (+1 more)
src/motor_control_ros2/: CMakeLists.txt  README.md  setup.py
src/motor_control_ros2/config/: arm_config.yaml  chassis_params.yaml  motors.yaml  pid_params.yaml  remote_control_params.yaml
src/motor_control_ros2/include/motor_control_ros2/: config_parser.hpp  delta_arm_manager_node.hpp  motor_base.hpp  omni_wheel_kinematics.hpp  remote_control_node.hpp  serial_port.hpp  steer_wheel_kinematics.hpp
src/motor_control_ros2/motor_control_ros2/: __init__.py
src/motor_control_ros2/msg/: ChassisCommand.msg  ChassisState.msg  DamiaoMotorState.msg  SteerWheelState.msg  UnitreeGO8010Command.msg  UnitreeGO8010State.msg
src/motor_control_ros2/src/: can_driver.cpp  chassis_control_node.cpp  config_parser.cpp  damiao_motor.cpp  delta_arm_manager_node.cpp  dji_motor.cpp  motor_control_node.cpp  motor_monitor_node.cpp  remote_control_node.cpp  serial_port.cpp  steer_wheel_kinematics.cpp  unitree_motor.cpp
src/motor_control_ros2/src/hardware/: can_interface.cpp  serial_interface.cpp  unitree_sdk_wrapper.cpp
src/motor_control_ros2/srv/: MotorSetZero.srv
(+269 files in other folders)
